--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -7,7 +7,7 @@
 <div class="general-challenges">
 
     <ng-container *ngIf="activeTab===initialTab">
-        <lu-timer [dueDate]="dueDate!"></lu-timer>
+        <lu-timer [dueDate]="dueDate"></lu-timer>
     </ng-container>
 
 
