--- a/src/app/pages/first-page/first-page.component.css
+++ b/src/app/pages/first-page/first-page.component.css
@@ -4,6 +4,9 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    position: fixed;
+    top: 0;
+    left: 0;
     padding-bottom: 4rem;
 }
 
