Cambio de la informacion de challenge contract

--- a/src/app/shared/molecules/modal/modal.component.html
+++ b/src/app/shared/molecules/modal/modal.component.html
@@ -8,7 +8,7 @@
                     'modal__title':true,
                     'modal__title--gradient':modal.challenge.type==='accelerator'
                 }">
-                    {{modal.challenge.name}}
+                    {{modal.challenge.title}}
                 </h2>
                 <span class="modal__subtitle">{{modal.challenge.description}}</span>            
             </div>
