--- a/src/app/shared/atoms/challenge/challenge.component.html
+++ b/src/app/shared/atoms/challenge/challenge.component.html
@@ -9,5 +9,5 @@
         <img *ngIf="challenge.status" class="challenge__check" [src]="'../../../../assets/icons/Check.png'" alt="">
         <img *ngIf="challenge.status===false" class="challenge__check" [src]="'../../../../assets/icons/Wrong.png'" alt="">
     </div>
-    <h3 class="challenge__title">{{challenge.name}}</h3>
+    <h3 class="challenge__title">{{challenge.title}}</h3>
 </div>
