--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -12,8 +12,8 @@
 
 
     <div class="normal-challenges">
-        <h2 class="challenges__title">Retos por completar</h2>
-        <p class="challenge__description">La validación de los retos se realiza cada fecha de corte. No lo olvides.</p>
+        <h2 class="challenges__title">Misiones especiales</h2>
+        <p class="challenge__description">Aún te falta completar una misión. Elige una de las siguientes misiones especiales para aumentar tu límite de crédito.</p>
         <div class="challenges">
             <ng-container *ngFor="let challenge of mission.challenges">
                 <ng-container *ngIf="challenge.type==='mandatory' || challenge.type==='accelerator'">
