--- a/src/app/shared/molecules/modal/modal.component.html
+++ b/src/app/shared/molecules/modal/modal.component.html
@@ -16,14 +16,12 @@
             <div class="modal__content">
                 <p class="modal__description" *ngIf="modal.challenge.description">{{modal.challenge.description}}</p>
                 <ng-container *ngFor="let spec of modal.challenge.specs">
-                    <span class="modal__spec-title">{{spec.title}}</span>
+                    <ul class="modal__specs">
+                        <span *ngIf="spec.title" class="modal__spec-title">{{spec.title}}</span>
+                        <li *ngFor="let item of spec.spec" class="modal__spec-item">{{item}}</li>
+                    </ul>
                 </ng-container>
-                <p></p>
-                <ul>
-                    <ng-container *ngFor="let condition of modal.challenge.conditions">
-                        <li>{{condition}}</li>
-                    </ng-container>
-                </ul>
+
             </div>
 
         </div>
