--- a/src/app/shared/molecules/modal/modal.component.css
+++ b/src/app/shared/molecules/modal/modal.component.css
@@ -58,6 +58,13 @@
     font-size: .875rem;
 }
 
+.modal__content{
+    height: 100%;
+    overflow-y: auto;
+}
+
 .modal__spec-title{
+    margin-top: 2rem;
+    text-decoration: none;
     font-weight: 700;
 }
