--- a/src/app/shared/molecules/modal/modal.component.css
+++ b/src/app/shared/molecules/modal/modal.component.css
@@ -17,12 +17,21 @@
     box-shadow: 0px 6px 14px rgba(153, 153, 153, 0.3);
     margin: 5.5rem 1.5rem;
     max-width: 375px;
-    padding: 3rem 1.25rem 4.625rem 1.25rem;
+    padding: 3rem 1.25rem 1.25rem 1.25rem;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow: hidden;
+}
+.modal--redirect{
+    padding: 3rem 1.25rem 3rem 1.25rem;
+}
 
+.modal__body{
+    overflow: hidden;
+    height: 100%;
+    overflow: hidden;
 }
 
 .modal__header{
@@ -59,6 +68,9 @@
 }
 
 .modal__content{
+    display: grid;
+    gap: 1rem;
+    grid-auto-rows: min-content;
     height: 100%;
     overflow-y: auto;
 }
