--- a/src/app/shared/molecules/modal/modal.component.css
+++ b/src/app/shared/molecules/modal/modal.component.css
@@ -1,6 +1,22 @@
+.modal{
+    background: var(--theme-color-background-03);
+    border-radius: 16px;
+    box-shadow: 0px 6px 14px rgba(153, 153, 153, 0.3);
+    display: grid;
+    grid-template-rows: min-content,;
+    margin: 5.5rem 1.5rem;
+    max-width: 375px;
+    padding: 3rem 1.25rem 1.25rem 1.25rem;
+    z-index: 101;
+}
 
-.modal-bg{
+.modal--redirect{
+    padding: 3rem 1.25rem 3rem 1.25rem;
+}
+
+.modal::after{
     background-color: var(--theme-color-neutral-02);
+    content: '';
     display: flex;
     height: 100%;   
     justify-content: center;
@@ -11,7 +27,62 @@
     z-index: 100;
 }
 
-.modal{
+
+.modal__header{
+    margin-bottom: 1.5rem;
+}
+
+.modal__title{
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+
+.modal__title--gradient{
+    background: var(--theme-color-background-gradient-likeu);
+    color:transparent;
+    background-clip: text;
+}
+
+.modal__subtitle{
+    color: var( --theme-color-text-03);
+}
+
+.modal__content{
+    display: grid;
+    gap: 1rem;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+}
+
+.modal__description{
+    font-size: .875rem;
+}
+
+.modal__specs{
+    list-style: none;
+    display: grid;
+    grid-auto-rows: min-content;
+    gap: 1rem;
+    padding: 0;
+}
+
+.modal__spec{
+    margin-bottom: 1rem;
+}
+
+.modal__spec-title{
+    font-weight: 700;
+    font-size: 1rem;
+}
+
+.modal__spec-item{
+    list-style: circle ;
+    font-size: .875rem;
+    padding: 1rem;
+}
+
+/* .modal{
     background: var(--theme-color-background-03);
     border-radius: 16px;
     box-shadow: 0px 6px 14px rgba(153, 153, 153, 0.3);
@@ -62,6 +133,10 @@
     overflow-y: auto;
 }
 
+.modal__spec--title{
+
+}
+
 .modal_description{
     font-size: .875rem;
 }
@@ -70,7 +145,6 @@
     display: grid;
     gap: 1rem;
     grid-auto-rows: min-content;
-    height: 100%;
     overflow-y: auto;
 }
 
@@ -78,4 +152,4 @@
     margin-top: 2rem;
     text-decoration: none;
     font-weight: 700;
-}
+} */
