--- a/src/app/shared/molecules/modal/modal.component.css
+++ b/src/app/shared/molecules/modal/modal.component.css
@@ -1,23 +1,5 @@
-.modal{
-    background: var(--theme-color-background-03);
-    border-radius: 16px;
-    box-shadow: 0px 6px 14px rgba(153, 153, 153, 0.3);
-    display: grid;
-    grid-template-rows: min-content,;
-    margin: 5.5rem 1.5rem;
-    max-width: 375px;
-    padding: 3rem 1.25rem 1.25rem 1.25rem;
-    z-index: 101;
-}
-
-.modal--redirect{
-    padding: 3rem 1.25rem 3rem 1.25rem;
-}
-
 .modal-bg{
-    align-items: center;
     background-color: var(--theme-color-neutral-02);
-    content: '';
     display: flex;
     height: 100%;   
     justify-content: center;
@@ -28,6 +10,23 @@
     z-index: 100;
 }
 
+.modal{
+    background: var(--theme-color-background-03);
+    border-radius: 16px;
+    box-shadow: 0px 6px 14px rgba(153, 153, 153, 0.3);
+    margin: 5.5rem 1.5rem;
+    max-width: 375px;
+    padding: 3rem 1.25rem 1.25rem 1.25rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden;
+}
+
+.modal--redirect{
+    padding: 3rem 1.25rem 3rem 1.25rem;
+}
 
 .modal__header{
     margin-bottom: 1.5rem;
