--- a/src/app/shared/molecules/modal/modal.component.css
+++ b/src/app/shared/molecules/modal/modal.component.css
@@ -3,11 +3,13 @@
     display: flex;
     height: 100%;   
     justify-content: center;
+    padding: 5.5rem 1.5rem;
     position: fixed;
     right: 0;
     top: 0;
     width: 100%;
     z-index: 100;
+    padding: 5.5 0;
 }
 
 .modal{
@@ -18,7 +20,7 @@
     max-width: 375px;
     padding: 3rem 1.25rem 1.25rem 1.25rem;
     position: relative;
-    display: flex;
+    display: grid;
     flex-direction: column;
     justify-content: space-between;
     overflow: hidden;
@@ -30,6 +32,7 @@
 
 .modal__header{
     margin-bottom: 1.5rem;
+    text-align: center;
 }
 
 .modal__title{
@@ -77,9 +80,19 @@
 }
 
 .modal__spec-item{
-    list-style: circle ;
+    list-style: circle start;
     font-size: .875rem;
-    padding: 1rem;
+    padding-left: 1rem;
+    position: relative;
+}
+
+.modal__spec-item::before{
+    position: absolute;
+    content: '';
+    border-radius: 50%;
+    height: 2px;
+    width: 2px;
+    left: -1rem;
 }
 
 /* .modal{
