--- a/src/app/shared/molecules/modal/modal.component.css
+++ b/src/app/shared/molecules/modal/modal.component.css
@@ -9,7 +9,6 @@
     top: 0;
     width: 100%;
     z-index: 100;
-    padding: 5.5 0;
 }
 
 .modal{
@@ -19,10 +18,10 @@
     margin: 5.5rem 1.5rem;
     max-width: 375px;
     padding: 3rem 1.25rem 1.25rem 1.25rem;
+    height: 100%;
     position: relative;
-    display: grid;
+    display: flex;
     flex-direction: column;
-    justify-content: space-between;
     overflow: hidden;
 }
 
