cambios en eestilos e informacion en el firstPageComponent

--- a/src/app/pages/first-page/first-page.component.html
+++ b/src/app/pages/first-page/first-page.component.html
@@ -7,14 +7,14 @@
         <img class="" src="../../../assets/icons/cards.png" alt="">
     </div>
     
-    <p class="first-page__description"> <span>Incrementa tu línea de crédito</span> de forma automática cumpliendo los objetivos para alcanzar <span>tu potencial financiero.</span></p>
+    <p class="first-page__description"> <span>Aumenta tu línea de crédito</span> sin ir a sucursal.</p>
 
     <div class="first-page__time-line">
-        <h3 class="first-page__objectives-title">Tus objetivos son los siguientes*</h3>
+        <h3 class="first-page__objectives-title">Algunas de las misiones por cumplir, son:</h3>
         <sn-timeline></sn-timeline>
     </div>
 
     <p class="first-page__terms">*Consulta términos y condiciones completos en <a href="">www.santander.com.mx/personas/tarjetas-de-credito/likeu.html</a></p>
 
-    <button class="btn" [routerLink]="'/'">Quiero unirme al reto</button>
+    <button class="btn" (click)="close()" >Quiero unirme al reto</button>
 </div>
