--- a/src/app/pages/first-page/first-page.component.css
+++ b/src/app/pages/first-page/first-page.component.css
@@ -1,17 +1,32 @@
 .first-page{
-    display: flex;
     background: var(--theme-color-background-03);
     flex-direction: column;
+    height: 100%;
     justify-content: center;
     text-align: center;
     position: fixed;
     top: 0;
     left: 0;
     padding-bottom: 4rem;
+    overflow-y: auto;
+    width: 100%;
+    z-index: 100;
 }
 
-app-header{
-    margin-bottom: 1.5rem;
+.first-page__header{
+    margin-top: 1.5rem;
+}
+
+app-header::before{
+    background: #F5F7FA;
+    border-radius: 0 0 50% 50%;
+    content: '';
+    height: 440px;
+    left: -25%;
+    position: absolute;
+    top: -180px;
+    width: 150%;
+    z-index: -1;
 }
 
 .first-page__title{
@@ -36,6 +51,7 @@ app-header{
 }
 
 .first-page__objectives-title{
+    font-size: 1.25rem;
     margin-bottom: 1.5rem;
 }
 
