Correccion si el currentPeriod ees superior al

--- a/src/app/pages/challenge-likeu/challenge-likeu.component.html
+++ b/src/app/pages/challenge-likeu/challenge-likeu.component.html
@@ -11,7 +11,7 @@
             [mission]="missionActive"
             [tabs]="tabs"
             [dueDate]="cutOfDate"
-            [initialTab]="currentPeriod"
+            [initialTab]="indexTab"
             [activeTab]="indexTab"
             [specialChallenges]="specialChallenges"
             (challengeActive)="challengeActive=$event;showModal()"
