--- a/src/app/pages/message/message.component.css
+++ b/src/app/pages/message/message.component.css
@@ -1,8 +1,11 @@
 .message{
     background: var(--theme-color-background-03);
+    display: flex;
+    flex-direction: column;
     height: 100%;
     left: 0;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     position: fixed;
     top: 0;
     width: 100%;
@@ -37,11 +40,22 @@
     z-index: 1;
 }
 
+.message__body{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-between;
+    margin-bottom: 4rem;
+}
+
 .content{
     align-items: center;
-    display: grid;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    text-align: center
+    margin-bottom: 2rem;
+    text-align: center;
+
 }
 
 .content__title{
@@ -64,7 +78,7 @@
 .content__description{
     font-size: 1.125rem;
     line-height: 1.75rem;
-    margin: 0 3rem 6.4rem 3rem;
+    margin: 0 3rem;
 }
 
 button{
@@ -84,7 +98,7 @@ button{
 }
 
 
-@media screen and (max-height:700px) {
+/* @media screen and (max-height:700px) {
     .header, .content__subtitle{
         margin-bottom: 1.5rem;
     }
@@ -92,4 +106,4 @@ button{
     p.content__description{
         margin-bottom: 3rem;
     }
-}
+} */
