Actualizacion de informacion de acuerdo a ux

--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -11,8 +11,8 @@
     </ng-container>
 
     <div class="normal-challenges">
-        <h2 class="challenges__title">Misiones por completar</h2>
-        <p class="challenge__description">Recuerda que la validación de las misiones se realiza en cada ciclo.</p>
+        <h2 class="challenges__title">Objetivos por completar</h2>
+        <p class="challenge__description">La validación de tus Objetivos se realiza en cada fecha de corte.</p>
         <div class="challenges">
             <ng-container *ngFor="let challenge of mission.challenges">
                 <ng-container *ngIf="challenge.type==='mandatory' || challenge.type==='accelerator'">
@@ -22,8 +22,8 @@
         </div>
     </div>
     <div *ngIf=" specialChallenges.length>0 " class="special-challenges">
-        <h2 class="challenges__title">Misiones especiales</h2>
-        <p class="challenge__description">Aún te falta completar una misión. Elige una de las siguientes misiones especiales para aumentar tu límite de crédito.</p>
+        <h2 class="challenges__title">Aún te falta completar un reto</h2>
+        <p class="challenge__description">Elige uno de los siguientes retos para aumentar tu línea de crédito.​</p>
         <div class="challenges">
             <ng-container *ngFor="let challenge of specialChallenges">
                 <sn-challenge [statusMission]="mission.status" animation="zoomIn" [challenge]="challenge" (click)="openModal.emit($event)" (click)="challengeActive.emit(challenge)"></sn-challenge>  
