--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -9,6 +9,11 @@
     z-index: 100;
 }
 
+.heder__btn{
+    cursor: pointer;
+}
+
+
 /* .header::before{
     content: '';
     background: var(--theme-color-background-03);
