--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <img src="../../../../assets/icons/chevron-left.png" alt="" (click)="close()">
+    <img class="heder__btn" src="../../../../assets/icons/chevron-left.png" alt="" (click)="close()">
     <h2>Reto LikeU</h2>
-    <img src="../../../../assets/icons/phone.png" alt="client_support" (click)="redirect()">
+    <img class="heder__btn" src="../../../../assets/icons/phone.png" alt="client_support" (click)="redirect()">
 </div>
