--- a/src/app/shared/atoms/question/question.component.html
+++ b/src/app/shared/atoms/question/question.component.html
@@ -9,7 +9,7 @@
         <p class="question__answer">{{question.answer}}</p>
         <span *ngIf="question.additionalInfo" class="question__aditional">
             {{question.additionalInfo}}
-            <a class="question__link">{{question.link}}</a>
+            <a [href]="'www.santander.com.mx/personas/tarjetas-de-credito/likeu.html'" target="_blank" rel="noopener noreferrer" class="question__link">{{question.link}}</a>
         </span>
     </div>
 </div>
