--- a/src/styles.css
+++ b/src/styles.css
@@ -94,6 +94,8 @@ sn-icon>i[class^=sn-]{
     position: absolute;
     right: 1.5rem;
     top: .875rem;
+    cursor: pointer;
+
 }
 
 .btn{
@@ -103,7 +105,7 @@ sn-icon>i[class^=sn-]{
     border-radius: 3rem;
     color: var(--theme-color-text-01);
     font-weight: 700;
-
+    cursor: pointer;
     padding: 0.75rem 1.5rem;
 }
 
