Correccion titulos limites

--- a/src/app/shared/components/card-data/card-data.component.html
+++ b/src/app/shared/components/card-data/card-data.component.html
@@ -1,11 +1,11 @@
 <div class="card-data">
     
-    <sn-round-card [principalText]="data.current_limit.amount" [secondaryText]="'Tu crédito actual'"></sn-round-card>
+    <sn-round-card [principalText]="data.current_limit.amount" [secondaryText]="'Límite de crédito actual'"></sn-round-card>
 
     <div class="percent">
         <sn-circle-progress [percent]="percent" [icon]="'../../../../assets/icons/trophy.png'"></sn-circle-progress>
     </div>
 
-    <sn-round-card [principalText]="data.potential_limit.amount" [secondaryText]="'Crédito potencial'"></sn-round-card>
+    <sn-round-card [principalText]="data.potential_limit.amount" [secondaryText]="'Límite potencial'"></sn-round-card>
 
 </div>
