--- a/src/app/shared/atoms/tab/tab.component.html
+++ b/src/app/shared/atoms/tab/tab.component.html
@@ -1,4 +1,4 @@
-<button tabsDirective="tab" [id]="tab.id" [ngClass]="{
+<button  [id]="tab.id" [ngClass]="{
     'tab':true,
     'active--tab':(tab.status==='ongoing')
     
