--- a/src/app/shared/components/month-challenges/month-challenges.component.html
+++ b/src/app/shared/components/month-challenges/month-challenges.component.html
@@ -1,6 +1,6 @@
 <div #tabsContainer id="tabs--container" tabsDirective="tabs-container" [initialTab]="initialTab" class="tabs">
     <ng-container *ngFor="let tab of tabs;let i=index">
-        <lu-tab class="tab" (click)="indexTab.emit(i); activeTab=i" [tab]="tab"></lu-tab>
+        <lu-tab tabsDirective="tab" class="tab" (click)="indexTab.emit(i); activeTab=i" [tab]="tab"></lu-tab>
     </ng-container>
 </div>
 
