--- a/src/app/pages/first-page/first-page.component.html
+++ b/src/app/pages/first-page/first-page.component.html
@@ -6,7 +6,7 @@
         <h4 class="first-page__subtitle">¡Santander confía en ti!</h4>
         <img class="" src="../../../assets/icons/cards.png" alt="">
     </div>
-    
+
     <p class="first-page__description"> <span>Aumenta tu línea de crédito</span> sin ir a sucursal.</p>
 
     <div class="first-page__time-line">
@@ -14,7 +14,7 @@
         <sn-timeline></sn-timeline>
     </div>
 
-    <p class="first-page__terms">*Consulta términos y condiciones completos en <a href="">www.santander.com.mx/personas/tarjetas-de-credito/likeu.html</a></p>
+    <p class="first-page__terms">*Consulta términos y condiciones completos en <span class="first-page__terms-link">www.santander.com.mx/personas/tarjetas-de-credito/likeu.html</span></p>
 
     <button class="btn" (click)="close()" >Quiero unirme al reto</button>
 </div>
