--- a/src/app/shared/atoms/timer/timer.component.html
+++ b/src/app/shared/atoms/timer/timer.component.html
@@ -1,4 +1,3 @@
 <div class="time-remaining">
-  {{transformSeconds()}}
-    <span class="time-remaining__text"> {{remainingDays.firstText}} <span class="time-remaining__days">{{remainingDays.secondText}}</span></span>
+    <span class="time-remaining__text"> Faltan: <span class="time-remaining__days">{{remainingDays}}</span></span>
 </div>
