--- a/src/app/shared/molecules/modal/modal.component.css
+++ b/src/app/shared/molecules/modal/modal.component.css
@@ -15,7 +15,7 @@
     background: var(--theme-color-background-03);
     border-radius: 16px;
     box-shadow: 0px 6px 14px rgba(153, 153, 153, 0.3);
-    max-width: 375px;
+    max-width: 327px;
     padding: 3rem 1.25rem 1.25rem 1.25rem;
     height: 100%;
     position: relative;
@@ -57,11 +57,46 @@
 
 .modal__content{
     display: grid;
-    gap: 1rem;
+    font-size: .875rem;
+    line-height: 21px;
+    font-weight: 400;
     width: 100%;
     height: 100%;
     overflow: auto;
     grid-auto-rows: min-content;
+}
+
+.modal__content-item{
+  position: relative;
+}
+
+.modal__content--bold{
+  font-weight: 700;
+}
+
+.modal__content--tab{
+  padding-left: 1.5rem;
+}
+
+.modal__content--mb{
+  margin-bottom: 1.5rem;
+}
+
+.modal__content--pretext-icon{
+  left: 10px;
+  position: absolute;
+  top: 10px;
+}
+
+.modal__content--pretext::before{
+  content: '';
+  border-radius: 50%;
+  background-color: #000;
+  height: 3px;
+  left: 10px;
+  position: absolute;
+  top: 10px;
+  width: 3px;
 }
 
 .modal__description{
@@ -72,12 +107,16 @@
     list-style: none;
     display: grid;
     grid-auto-rows: min-content;
-    /* gap: 1rem; */
+    gap: 1rem;
     padding: 0;
 }
 
 .modal__spec-title{
-    font-weight: 700;
+    font-size: .875rem;
+    margin-bottom: .5rem;
+}
+
+.modal__spec-title{
     font-size: .875rem;
     margin-bottom: .5rem;
 }
@@ -87,16 +126,12 @@
     font-size: .875rem;
     padding-left: 1rem;
     position: relative;
-    margin-bottom: .75rem;
 }
 
-.modal__spec-item::before{
-    content: '';
-    border-radius: 50%;
-    background-color: #000;
-    height: 3px;
-    left: 8px;
-    position: absolute;
-    top: 8.5px;
-    width: 3px;
+.modal__footer{
+  font-weight: 400;
+
+}
+.modal__footer--strong{
+  font-weight: 700;
 }
