--- a/src/app/shared/molecules/modal/modal.component.css
+++ b/src/app/shared/molecules/modal/modal.component.css
@@ -35,11 +35,26 @@
     text-align: center;
 }
 
+
+.modal__header-icon{
+  height: 3rem;
+  margin: auto;
+  margin-bottom: .5rem;
+  width: 3rem;
+}
+
+.modal__header-icon>img{
+  height: 100%;
+  width: 100%;
+}
+
 .modal__title{
     font-size: 1.25rem;
     font-weight: 700;
     max-width: 15rem;
     margin:auto;
+  }
+  .modal__title--subtitle{
     margin-bottom: 1rem;
 }
 
