Correccion boton continuar first page

--- a/src/app/pages/first-page/first-page.component.html
+++ b/src/app/pages/first-page/first-page.component.html
@@ -16,5 +16,5 @@
 
     <p class="first-page__terms">*Consulta términos y condiciones completos en <span class="first-page__terms-link">www.santander.com.mx/personas/tarjetas-de-credito/likeu.html</span></p>
 
-    <button class="btn" (click)="close()" >Quiero unirme al reto</button>
+    <button class="btn" (click)="close()" >Continuar</button>
 </div>
