--- a/src/app/shared/molecules/modal/modal.component.html
+++ b/src/app/shared/molecules/modal/modal.component.html
@@ -47,7 +47,7 @@
         >
           <span
             [innerHTML]="
-              convertToStrong(text.text, text.strong ? text.strong : false)
+              convertToStrong(text.strong ? text.strong : false,text.text)
             "
           >
           </span>
