--- a/src/app/shared/molecules/modal/modal.component.css
+++ b/src/app/shared/molecules/modal/modal.component.css
@@ -100,7 +100,7 @@
 .modal__content--pretext-icon{
   left: 10px;
   position: absolute;
-  top: 10px;
+  top: 0;
 }
 
 .modal__content--pretext::before{
