--- a/src/app/pages/first-page/first-page.component.html
+++ b/src/app/pages/first-page/first-page.component.html
@@ -10,11 +10,13 @@
     <p class="first-page__description"> <span>Aumenta tu línea de crédito</span> sin ir a sucursal.</p>
 
     <div class="first-page__time-line">
-        <h3 class="first-page__objectives-title">Algunas de las misiones por cumplir, son:</h3>
+        <h3 class="first-page__objectives-title">Algunas de las misiones por cumplir son:</h3>
         <sn-timeline></sn-timeline>
     </div>
 
     <p class="first-page__terms">*Consulta términos y condiciones completos en <span class="first-page__terms-link">www.santander.com.mx/personas/tarjetas-de-credito/likeu.html</span></p>
 
-    <button class="btn" (click)="close()" >Continuar</button>
+     <div class="first-page__btn">
+       <button class="btn" (click)="close()" >Continuar</button>
+    </div>
 </div>
