--- a/src/app/pages/first-page/first-page.component.css
+++ b/src/app/pages/first-page/first-page.component.css
@@ -1,23 +1,25 @@
-.first-page{
-    background: var(--theme-color-background-03);
-    flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    text-align: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding-bottom: 4rem;
-    overflow-y: auto;
-    width: 100%;
-    z-index: 100;
+.first-page {
+  background: var(--theme-color-background-03);
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding-bottom: 4rem;
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 100%;
+  z-index: 100;
+  display: grid;
 }
 
-.first-page__header{
-    margin-top: 1.5rem;
+.first-page__header {
+  margin-top: 1.5rem;
 }
 
-app-header::before{
+/* app-header::before{
     background: #F5F7FA;
     border-radius: 0 0 50% 50%;
     content: '';
@@ -27,53 +29,56 @@ app-header::before{
     top: -180px;
     width: 150%;
     z-index: -1;
+} */
+
+.first-page__title {
+  font-size: 2rem;
+  font-weight: 700;
 }
 
-.first-page__title{
-    font-size: 2rem;
-    font-weight: 700;
+.first-page__subtitle {
+  color: var(--theme-color-text-02);
+  font-size: 1.125rem;
+  font-weight: 400;
 }
 
-.first-page__subtitle{
-    color: var(--theme-color-text-02);
-    font-size: 1.125rem;
-    font-weight: 400;
-
+.first-page__description {
+  margin-bottom: 1rem;
 }
 
-.first-page__description{
-    margin: 0 1.5rem;
-    margin-bottom: 2rem;
+.first-page__description > span {
+  font-weight: 700;
 }
 
-.first-page__description>span{
-    font-weight: 700;
+.first-page__objectives-title {
+  font-family: "SantanderHeadline", sans-serif, Arial, Helvetica;
+  font-size: 1.25rem;
+  margin-bottom: 1.5rem;
 }
 
-.first-page__objectives-title{
-    font-size: 1.25rem;
-    margin-bottom: 1.5rem;
+.first-page__terms {
+  color: var(--theme-color-text-02);
+  font-size: 0.875rem;
+  margin: 0 1.5rem;
+  margin-bottom: 3rem;
+  text-align: left;
 }
 
-.first-page__terms{
-    color: var(--theme-color-text-02);
-    font-size: .875rem;
-    margin: 0 1.5rem;
-    margin-bottom: 3rem;
-    text-align: left;
-
+.first-page__terms-link {
+  font-weight: 700;
 }
 
-.first-page__terms-link{
-  font-size: 700;
+.first-page__terms > a {
+  color: var(--theme-color-text-02);
+  font-weight: 700;
+  text-decoration: none;
 }
 
-.first-page__terms>a{
-    color: var(--theme-color-text-02);
-    font-weight: 700;
-    text-decoration: none;
+.first-page__btn {
+  margin: 0 4rem;
 }
-
-.first-page__button{
-    margin: 0 4rem;
+.btn{
+  box-shadow: 0px 10px 12px rgba(236, 0, 0, 0.12);
+  height: 3rem;
+  width: 100%;
 }
