--- a/src/styles.css
+++ b/src/styles.css
@@ -54,8 +54,8 @@ body{
     font-size: 16px;
     font-family: 'SantanderText', sans-serif, Arial, Helvetica;
     margin:auto;
-    max-width: 375px;
-    width: 100%;
+    width: 100vw;
+    position: relative;
     overscroll-behavior:none;
 }
 
@@ -111,7 +111,7 @@ sn-icon>i[class^=sn-]{
     padding: 0.75rem 1.5rem;
 }
 
-.bg__circle::before{
+/* .bg__circle::before{
     background: var(--theme-color-background-03);
     border-radius: 0 0 50% 50%;
     content: '';
@@ -122,9 +122,7 @@ sn-icon>i[class^=sn-]{
     width: 150%;
     z-index: -1;
 
-}
-
-
+} */
 
 
 /*Animation styles*/
