--- a/src/app/shared/atoms/round-card/round-card.component.css
+++ b/src/app/shared/atoms/round-card/round-card.component.css
@@ -1,25 +1,24 @@
-.round-card{
-    align-items: center;
-    background: var(--theme-color-background-03);
-    border: 2px solid var(--theme-color-background-default);
-    border-radius: 14px;
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    min-height: 3.5rem;
-    min-width: 8rem;
-    
+.round-card {
+  align-items: center;
+  background: var(--theme-color-background-03);
+  border: 2px solid var(--theme-color-background-default);
+  border-radius: 14px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  min-height: 3.5rem;
+  width: 100%;
 }
 
-.round-card__principal-text{
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 150%;
+.round-card__principal-text {
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 150%;
 }
 
-.round-card__secondary-text{
-    font-weight: 400;
-    font-size: .625rem;
-    line-height: 150%;
-    color: var(--theme-color-text-04);
+.round-card__secondary-text {
+  font-weight: 400;
+  font-size: 0.625rem;
+  line-height: 150%;
+  color: var(--theme-color-text-04);
 }
