--- a/src/app/shared/atoms/tab/tab.component.css
+++ b/src/app/shared/atoms/tab/tab.component.css
@@ -2,7 +2,7 @@
     align-items: center;
     background:transparent;
     border: 1px solid var(--theme-color-ui-04);
-    border-radius: 24px;
+    border-radius: 1.5rem;
     color: var(--theme-color-text-04);
     display: flex;
     font-size: .875rem;
@@ -25,10 +25,10 @@
     background-color: transparent;
     border: none;
     background-size: 100% 100%;
-    height: 20px;
+    height: 1.25rem;
     margin-right: .25rem;
-    max-width: 20px;
-    width: 20px;
+    max-width: 1.25rem;
+    width: 1.25rem;
 
 }
 
@@ -46,3 +46,8 @@
 .tab__icon--finish{
     background-image: url("../../../../assets/icons/Activa_tu_tarjeta.png");
 }
+
+
+/* @media screen and (max-width:374px) {
+  .tab{
+} */
