--- a/src/styles.css
+++ b/src/styles.css
@@ -196,4 +196,16 @@ sn-icon>i[class^=sn-]{
 }
 
 
+@media screen and (max-width:374px) {
+  html{
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width:319px) {
+  html{
+    font-size: 12px;
+  }
+}
+
 
