Correcciones estilos first page

--- a/src/app/pages/first-page/first-page.component.html
+++ b/src/app/pages/first-page/first-page.component.html
@@ -1,6 +1,6 @@
 
 <div class="first-page">
-    <app-header></app-header>
+    <app-header [circleBG]="false"></app-header>
     <div class="first-page__header">
         <h2 class="first-page__title">Reto Like U</h2>
         <h4 class="first-page__subtitle">¡Santander confía en ti!</h4>
