--- a/src/app/pages/first-page/first-page.component.css
+++ b/src/app/pages/first-page/first-page.component.css
@@ -11,25 +11,28 @@
   overflow-y: auto;
   overflow-x: hidden;
   width: 100%;
-  z-index: 100;
+  z-index: 100000;
   display: grid;
 }
 
 .first-page__header {
   margin-top: 1.5rem;
 }
+.first-page__header>img {
+  width: 16.9rem;
+}
 
-/* app-header::before{
+app-header::before{
     background: #F5F7FA;
     border-radius: 0 0 50% 50%;
     content: '';
-    height: 440px;
+    height: 27.5rem;
     left: -25%;
     position: absolute;
-    top: -180px;
+    top: -11.25rem;
     width: 150%;
     z-index: -1;
-} */
+}
 
 .first-page__title {
   font-size: 2rem;
@@ -43,6 +46,7 @@
 }
 
 .first-page__description {
+  font-size: 1rem;
   margin-bottom: 1rem;
 }
 
