--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -8,11 +8,11 @@
     z-index: 100;
 }
 
-.header::before{
+.header__circle-bg::before{
   background: var(--theme-color-background-03);
   border-radius: 0 0 50% 50%;
   content: '';
-  height: 375px;
+  height: 23.5rem;
   top:-12.5rem;
   left: -25%;
   position: absolute;
@@ -25,16 +25,6 @@
 }
 
 
-/* .header::before{
-    content: '';
-    background: var(--theme-color-background-03);
-    border-radius: 45%;
-    height: 184px;
-    position: absolute;
-    transform: matrix(1, 0, 0, -1, 0, 0);
-    width: 100%;
-    z-index: 0;
-} */
 
 h2{
     font-size: 1.25rem;
@@ -46,7 +36,7 @@ sn-icon{
 }
 
 
-
+/*
 @media screen and (max-width:374px) {
   .header::before{
     top: -15.5rem;
@@ -56,4 +46,4 @@ sn-icon{
   .header::before{
     top: -18.5rem;
   }
-}
+} */
